--- a/style/main.css
+++ b/style/main.css
@@ -132,10 +132,21 @@ figure:hover+span {
     .hover {
         padding-left: 180px
     }
-    #filter {
-        display: block;
-    }
     table #zbirka {
         padding: 150px;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .filter {
+        display: none;
+        visibility: hidden;
+    }
+    .tabela-zbirke {
+        left: 0;
+        z-index: 10;
+        width: 100%;
+        height: 100%;
+        position: absolute;
     }
   }
